--- a/index.html
+++ b/index.html
@@ -220,6 +220,8 @@
                             <div class="chip" onclick="selectFormCategory('🏢 Продажа', this)">🏢 Продажа</div>
                             <div class="chip" onclick="selectFormCategory('🛠 Услуги', this)">🛠 Услуги</div>
                             <div class="chip" onclick="selectFormCategory('📦 Разное', this)">📦 Разное</div>
+                            <div class="chip" onclick="selectFormCategory('🚗 Авто', this)">🚗 Авто</div>
+                            <div class="chip" onclick="selectFormCategory('👕 Вещи', this)">👕 Вещи</div>
                         </div>
                     </div>
 
@@ -291,7 +293,13 @@
     </div>
 
     <script>
-        const allRegions = ["Вся Россия", "Москва", "Санкт-Петербург", "Луганская Народная Республика", "Донецкая Народная Республика", "Запорожская область", "Херсонская область", "Краснодарский край", "Ростовская область", "Свердловская область"];
+        const allRegions = ["Вся Россия", 
+            "Москва", "Санкт-Петербург", "Севастополь",
+            "Луганская Народная Республика", "Донецкая Народная Республика", "Запорожская область", "Херсонская область",
+            "Адыгея", "Алтай", "Башкортостан", "Бурятия", "Дагестан", "Ингушетия", "Кабардино-Балкария", "Калмыкия", "Карачаево-Черкесия", "Карелия", "Коми", "Крым", "Марий Эл", "Мордовия", "Саха (Якутия)", "Северная Осетия", "Татарстан", "Тыва", "Удмуртия", "Хакасия", "Чечня", "Чувашия",
+            "Алтайский край", "Забайкальский край", "Камчатский край", "Краснодарский край", "Красноярский край", "Пермский край", "Приморский край", "Ставропольский край", "Хабаровский край",
+            "Амурская область", "Архангельская область", "Астраханская область", "Белгородская область", "Брянская область", "Владимирская область", "Волгоградская область", "Вологодская область", "Воронежская область", "Ивановская область", "Иркутская область", "Калининградская область", "Калужская область", "Кемеровская область", "Кировская область", "Костромская область", "Курганская область", "Курская область", "Ленинградская область", "Липецкая область", "Магаданская область", "Московская область", "Мурманская область", "Нижегородская область", "Новгородская область", "Новосибирская область", "Омская область", "Оренбургская область", "Орловская область", "Пензенская область", "Псковская область", "Ростовская область", "Рязанская область", "Самарская область", "Саратовская область", "Сахалинская область", "Свердловская область", "Смоленская область", "Тамбовская область", "Тверская область", "Томская область", "Тульская область", "Тюменская область", "Ульяновская область", "Челябинская область", "Ярославская область",
+            "Еврейская АО", "Ненецкий АО", "Ханты-Мансийский АО", "Чукотский АО", "Ямало-Ненецкий АО"];
         
         let posts = [
             { id: 1, title: 'Разработка сайта на React', category: '💻 Фриланс', region: 'Вся Россия', desc: 'Нужен современный лендинг для бизнеса. Бюджет 15.000р. Срок до недели.', contact: '@dev_boss', date: '2 мин' },
@@ -462,7 +470,7 @@
 
         function redirectToBot() {
             document.getElementById('payBtn').innerHTML = '<div class="loader mx-auto"></div>';
-            setTimeout(() => window.location.href = "https://t.me/rabota_lnrbot", 1000);
+            setTimeout(() => window.location.href = "https://t.me/RUSSIAMAIN_bot", 1000);
         }
 
         function openModal(id) { document.getElementById(id).classList.add('active'); }
