--- a/index.html
+++ b/index.html
@@ -143,12 +143,13 @@
                 <div class="category-chip active px-6 py-3 rounded-2xl glass font-bold text-sm whitespace-nowrap shadow-sm" onclick="filterByCategory('all', this)">Все</div>
                 <div class="category-chip px-6 py-3 rounded-2xl glass font-bold text-sm whitespace-nowrap shadow-sm" onclick="filterByCategory('💼 Работа', this)">💼 Работа</div>
                 <div class="category-chip px-6 py-3 rounded-2xl glass font-bold text-sm whitespace-nowrap shadow-sm" onclick="filterByCategory('💻 Фриланс', this)">💻 Фриланс</div>
-                <div class="category-chip px-6 py-3 rounded-2xl glass font-bold text-sm whitespace-nowrap shadow-sm" onclick="filterByCategory('🏠 Аренда', this)">🏠 Аренда</div>
-                <div class="category-chip px-6 py-3 rounded-2xl glass font-bold text-sm whitespace-nowrap shadow-sm" onclick="filterByCategory('🏢 Продажа', this)">🏢 Продажа</div>
+                <div class="category-chip px-6 py-3 rounded-2xl glass font-bold text-sm whitespace-nowrap shadow-sm" onclick="filterByCategory('🏠 Аренда жилья', this)">🏠 Аренда жилья</div>
+                <div class="category-chip px-6 py-3 rounded-2xl glass font-bold text-sm whitespace-nowrap shadow-sm" onclick="filterByCategory('🏢 Продажа жилья', this)">🏢 Продажа жилья</div>
                 <div class="category-chip px-6 py-3 rounded-2xl glass font-bold text-sm whitespace-nowrap shadow-sm" onclick="filterByCategory('🚗 Авто', this)">🚗 Авто</div>
                 <div class="category-chip px-6 py-3 rounded-2xl glass font-bold text-sm whitespace-nowrap shadow-sm" onclick="filterByCategory('🛠 Услуги', this)">🛠 Услуги</div>
-                <div class="category-chip px-6 py-3 rounded-2xl glass font-bold text-sm whitespace-nowrap shadow-sm" onclick="filterByCategory('📱 Техника', this)">📱 Техника</div>
+                <div class="category-chip px-6 py-3 rounded-2xl glass font-bold text-sm whitespace-nowrap shadow-sm" onclick="filterByCategory('📱 Продажа техники', this)">📱 Продажа техники</div>
                 <div class="category-chip px-6 py-3 rounded-2xl glass font-bold text-sm whitespace-nowrap shadow-sm" onclick="filterByCategory('👕 Вещи', this)">👕 Вещи</div>
+                <div class="category-chip px-6 py-3 rounded-2xl glass font-bold text-sm whitespace-nowrap shadow-sm" onclick="filterByCategory('📦 Разное', this)">📦 Разное</div>
             </div>
         </div>
 
@@ -216,12 +217,13 @@
                         <div id="formCategoryGrid" class="form-category-grid grid grid-cols-2 sm:grid-cols-3 gap-3">
                             <div class="chip" onclick="selectFormCategory('💼 Работа', this)">💼 Работа</div>
                             <div class="chip" onclick="selectFormCategory('💻 Фриланс', this)">💻 Фриланс</div>
-                            <div class="chip" onclick="selectFormCategory('🏠 Аренда', this)">🏠 Аренда</div>
-                            <div class="chip" onclick="selectFormCategory('🏢 Продажа', this)">🏢 Продажа</div>
+                            <div class="chip" onclick="selectFormCategory('🏠 Аренда жилья', this)">🏠 Аренда жилья</div>
+                            <div class="chip" onclick="selectFormCategory('🏢 Продажа жилья', this)">🏢 Продажа жилья</div>
                             <div class="chip" onclick="selectFormCategory('🛠 Услуги', this)">🛠 Услуги</div>
-                            <div class="chip" onclick="selectFormCategory('📦 Разное', this)">📦 Разное</div>
                             <div class="chip" onclick="selectFormCategory('🚗 Авто', this)">🚗 Авто</div>
                             <div class="chip" onclick="selectFormCategory('👕 Вещи', this)">👕 Вещи</div>
+                            <div class="chip" onclick="selectFormCategory('📱 Продажа техники', this)">📱 Продажа техники</div>
+                            <div class="chip" onclick="selectFormCategory('📦 Разное', this)">📦 Разное</div>
                         </div>
                     </div>
 
@@ -231,7 +233,7 @@
                     </div>
                     
                     <button onclick="goToPricing()" class="btn-premium w-full py-6 rounded-[2.5rem] font-black text-xl text-white mt-4 uppercase tracking-widest shadow-xl">
-                        К выбору тарифа
+                        🔥Выбрать тариф🔥
                     </button>
                 </div>
             </div>
